// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addressHasher should create only address hash when identity key hash not available: address hash 1`] = `
Uint8Array [
  72,
  19,
  199,
  39,
  218,
  113,
  229,
  227,
  38,
  42,
  191,
  73,
  152,
  19,
  227,
  114,
]
`;

exports[`addressHasher should create unique 128bit hash of addresses: differentIdentityKey 1`] = `
Object {
  "0x1234": Array [
    Uint8Array [
      33,
      252,
      0,
      98,
      58,
      65,
      172,
      174,
      44,
      213,
      184,
      39,
      155,
      25,
      78,
      102,
    ],
    Uint8Array [
      72,
      19,
      199,
      39,
      218,
      113,
      229,
      227,
      38,
      42,
      191,
      73,
      152,
      19,
      227,
      114,
    ],
  ],
}
`;

exports[`addressHasher should create unique 128bit hash of addresses: differentProtocol 1`] = `
Object {
  "0x1234": Array [
    Uint8Array [
      44,
      148,
      96,
      62,
      71,
      94,
      120,
      208,
      150,
      176,
      93,
      173,
      120,
      10,
      63,
      82,
    ],
    Uint8Array [
      72,
      19,
      199,
      39,
      218,
      113,
      229,
      227,
      38,
      42,
      191,
      73,
      152,
      19,
      227,
      114,
    ],
  ],
}
`;

exports[`addressHasher should create unique 128bit hash of addresses: firstRes 1`] = `
Object {
  "0x1234": Array [
    Uint8Array [
      162,
      207,
      165,
      174,
      156,
      127,
      26,
      174,
      51,
      176,
      159,
      128,
      5,
      238,
      232,
      205,
    ],
    Uint8Array [
      72,
      19,
      199,
      39,
      218,
      113,
      229,
      227,
      38,
      42,
      191,
      73,
      152,
      19,
      227,
      114,
    ],
  ],
}
`;
